Add description for "### Design tokens: Wide"

--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -766,7 +766,9 @@ Adjusts the bordered variant outline via border width and color for a subtle fra
   />
 </TokenTable>
 
-#### Wide
+### Design tokens: Wide
+
+Defines layout and spacing for the wide variant, covering padding, content padding, minimum width, and background color.
 
 <TokenTable>
   <TokenRow token="--fs-product-card-wide-padding" value="0" />
