--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -591,7 +591,7 @@ To replicate this style, add the prop to both `ProductCard` and `ProductCardCont
 
 ### Button Click Action
 
-<Tabs items=["Example", "Code"] defaultIndex="0">
+<Tabs items={["Example", "Code"]} defaultIndex="0">
   <Tab>
     <OverviewSection containerStyle={{ display: "grid", gridTemplateColumns: "1fr 1fr 1fr" }}>
       <ProductCard>
@@ -696,7 +696,7 @@ To replicate this style, add the prop to both `ProductCard` and `ProductCardCont
 
 ### Delivery Promise Badges
 
-<Tabs items=["Example", "Code"] defaultIndex="0">
+<Tabs items={["Example", "Code"]} defaultIndex="0">
   <Tab>
     <OverviewSection containerStyle={{ display: "grid", gridTemplateColumns: "1fr 1fr 1fr" }}>
       <ProductCard>
