Update Filter by Store image

--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -37,7 +37,7 @@ Global filters remain active across all user navigation and are applied to all p
 
 Shoppers can filter available products globally using the **Filter by store**, which displays only products available for pickup at a specific store. This filter shows all available pickup points within a 50 km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
 
-![filter-by-store](https://vtexhelp.vtexassets.com/assets/docs/src/by-store___745e8c3ae10a84e55f88b107e5b00218.png)
+![filter-by-store](https://vtexhelp.vtexassets.com/assets/docs/src/dp-filter-by-store___6e22784e6d6a26719d8d7fbc6dfa0e43.gif)
 
 ### PLP or search page filters
 
