Update PLP and search filters

--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -41,14 +41,25 @@ Shoppers can filter available products globally using the **Filter by store**, w
 
 ### PLP or search page filters
 
-In PLPs or search pages, the shopper may have the following options to filter:
+In PLPs or search pages, the shopper have the following options to apply filters: [Delivery Methods](#delivery-methods-filters) and [Delivery Option](delivery-option-filters).
 
-* **Deliver to:** Displays available products according to the shopper's location.
-* **Pickup at:** Displays the store set in the global pickup point filter, or the one closest to the shopper's location. To change the store set in `Pickup at {storeName}`, the shopper can click on it and select a new store in the modal that opens. This filter shows all available pickup points within a 50 km radius for pickup configured in Checkout. The number of pickup points displayed is unlimited.
-* **Pickup nearby:** Displays products available for pickup at nearby stores. This filter shows up to 40 pickup points within 10 km of the shopper's location.
-* **Pickup anywhere:** Displays products available for pickup at any participating store within the merchant's network, rather than restricting results to a selected pickup location or geographic proximity. **It's mainly used by B2B stores**.
+#### Delivery Methods filters
 
-![plp-filters](https://vtexhelp.vtexassets.com/assets/docs/src/plp-by-shipping___e9ba4d4e3f0840c3ec53dc94ac7aafc4.png)
+Displays available products according to the shopper's location. In this option, shoppers can filter by the following filters:
+
+![dp-delivery-methods](https://vtexhelp.vtexassets.com/assets/docs/src/dp-delivery-methods-interface___1823a07911408beecd7d5517ec742a6f.png)
+
+| **Filter option** | **Description** |
+| ----------------- | --------------- |
+| **All delivery methods** | Displays products that match all of the active delivery method filters, **Shipping to**, **Pickup anywhere**, **Pickup at**, **Pickup nearby**. |
+| **Shipping to**  |  Displays products that can be shipped to the customer's specified location. |
+| **Pickup anywhere** | Displays products available for pickup at any participating store within the merchant's network, rather than restricting results to a selected pickup location or geographic proximity. This is often used by B2B stores. |
+| **Pickup at** | Displays the store set in the global pickup point filter, or the one closest to the shopper's location. To change the store set in `Pickup at {storeName}`, the shopper can click on it and select a new store in the modal that opens. This filter shows all available pickup points within a 50 km radius for pickup configured in Checkout. The number of pickup points displayed is unlimited. |
+| **Pickup nearby** | Displays products available for pickup at the shopper's nearby stores. This filter shows up to 40 pickup points within 10 km of the shopper's location. |
+
+#### Delivery Option
+
+![dp-delivery-methods](https://vtexhelp.vtexassets.com/assets/docs/src/dp-delivery-option___f471f36471656744b3d3f9fb4c3eb251.png)
 
 ## Understanding location priority
 
