--- a/docs/faststore/components/features/delivery-promise/overview.mdx
+++ b/docs/faststore/components/features/delivery-promise/overview.mdx
@@ -35,29 +35,29 @@ Delivery Promise offers shoppers two product filtering options:
 
 Global filters remain active across all user navigation and are applied to all product searches until they change or are cleared.
 
-Shoppers can filter available products globally using the **Filter by store**, which displays only products available for pickup at a specific store. This filter shows all available pickup points within a 50 km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
+Shoppers can filter available products globally using the **Filter by store**, which displays only products available for pickup at a specific store. This filter shows all available pickup points within a 50-km pickup radius configured in Checkout. The number of pickup points displayed is unlimited.
 
 ![filter-by-store](https://vtexhelp.vtexassets.com/assets/docs/src/dp-filter-by-store___6e22784e6d6a26719d8d7fbc6dfa0e43.gif)
 
 ### PLP or search page filters
 
-In PLPs or search pages, the shopper have the following options to apply filters: [Delivery Methods](#delivery-methods-filters) and [Delivery Option](delivery-option-filters).
+In PLPs or search pages, the shopper has the following options to apply filters: [Delivery Methods](#delivery-methods-filters) and [Delivery Option](#delivery-option-filters).
 
 #### Delivery Methods filters
 
-Displays available products according to the shopper's location. In this option, shoppers can filter by the following filters:
+Displays available products according to the shopper's location. In this option, shoppers can filter using the following options:
 
 ![dp-delivery-methods](https://vtexhelp.vtexassets.com/assets/docs/src/dp-delivery-methods-interface___1823a07911408beecd7d5517ec742a6f.png)
 
 | **Filter option** | **Description** |
 | ----------------- | --------------- |
-| **All delivery methods** | Displays products that match all of the active delivery method filters, **Shipping to**, **Pickup anywhere**, **Pickup at**, **Pickup nearby**. |
+| **All delivery methods** | Displays products that match all active delivery method filters, **Shipping to**, **Pickup anywhere**, **Pickup at**, **Pickup nearby**. |
 | **Shipping to**  |  Displays products that can be shipped to the customer's specified location. |
 | **Pickup anywhere** | Displays products available for pickup at any participating store within the merchant's network, rather than restricting results to a selected pickup location or geographic proximity. This is often used by B2B stores. |
-| **Pickup at** | Displays the store set in the global pickup point filter, or the one closest to the shopper's location. To change the store set in `Pickup at {storeName}`, the shopper can click on it and select a new store in the modal that opens. This filter shows all available pickup points within a 50 km radius for pickup configured in Checkout. The number of pickup points displayed is unlimited. |
+| **Pickup at** | Displays the store set in the global pickup point filter, or the one closest to the shopper's location. To change the store set in `Pickup at {storeName}`, the shopper can click on it and select a new store in the modal that opens. This filter shows all available pickup points within a 50-km radius for pickup configured in Checkout. The number of pickup points displayed is unlimited. |
 | **Pickup nearby** | Displays products available for pickup at the shopper's nearby stores. This filter shows up to 40 pickup points within 10 km of the shopper's location. |
 
-#### Delivery Option
+#### Delivery Option filters
 
 ![dp-delivery-methods](https://vtexhelp.vtexassets.com/assets/docs/src/dp-delivery-option___f471f36471656744b3d3f9fb4c3eb251.png)
 
